--- a/public/launchRock/launchrock.html
+++ b/public/launchRock/launchrock.html
@@ -1,1 +1,8 @@
-YOYO Splity!
+<html>
+    <head>
+        <title>Yo! Welcome to splityapp.com!</title>
+    </head>
+    <body>
+        <h1>Yo Success! The splity.com server block is working!</h1>
+    </body>
+</html>
